--- a/app/src/main/res/layout/sign_in_activity.xml
+++ b/app/src/main/res/layout/sign_in_activity.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sergeystets.vladex.SignInActivity">
+    tools:context="com.sergeystets.vladex.activity.SignInActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,7 +14,7 @@
         android:layout_centerInParent="true">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/sign_in_text"
             android:layout_width="131dp"
             android:layout_height="54dp"
             android:layout_alignParentStart="true"
@@ -23,7 +24,7 @@
             android:layout_marginTop="85dp"
             android:layout_marginEnd="138dp"
             android:layout_marginBottom="173dp"
-            android:text="Sign In"
+            android:text="@string/sign_in"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -31,18 +32,17 @@
             android:id="@+id/phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Phone Number" />
+            android:hint="@string/phone_number"
+            android:importantForAutofill="no"
+            android:inputType="phone" />
 
         <Button
             android:id="@+id/singin_next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#3f76ff"
-            android:text="Next"
+            android:text="@string/btn_sign_in_next"
             android:textColor="#fff" />
-
     </LinearLayout>
-
-
 
 </RelativeLayout>
