--- a/app/src/main/res/layout/verify_otp_activity.xml
+++ b/app/src/main/res/layout/verify_otp_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,30 +9,40 @@
 
     <TextView
         android:id="@+id/otp_was_sent_note"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp" />
+        android:layout_width="354dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="8dp"
+        android:text="We\'ve sent an SMS with activation code to your phone +380****293"
+        app:layout_constraintBottom_toTopOf="@+id/otp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/otp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="354dp"
+        android:layout_height="44dp"
         android:layout_below="@id/otp_was_sent_note"
         android:hint="@string/code"
         android:importantForAutofill="no"
-        android:inputType="text" />
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/otp_will_expire_note"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="352dp"
+        android:layout_height="36dp"
         android:layout_above="@id/otp"
         android:layout_below="@+id/otp"
-        android:layout_marginTop="34dp"
-        android:layout_marginBottom="-99dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp" />
+        android:layout_marginTop="12dp"
+        android:text="It will expire in: 10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/otp" />
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
