--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimary">#5b92b0</item>
         <item name="colorPrimaryDark">#4C778F</item>
         <item name="colorAccent">@color/accent</item>
-        <item name="android:textColorPrimary">#FFFFFF</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="android:textColor">@color/secondary_text</item>
         <item name="android:navigationBarColor">#5b92b0</item>
     </style>
