--- a/app/src/main/res/layout/sign_in_callback_activity.xml
+++ b/app/src/main/res/layout/sign_in_callback_activity.xml
@@ -4,20 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sergeystets.vladex.activity.SignInActivity">
+    tools:context="com.sergeystets.vladex.activity.SignInCallBackActivity">
 
-    <Button
-        android:id="@+id/sign_in"
-        android:layout_width="102dp"
-        android:layout_height="44dp"
-        android:background="#3f76ff"
-        android:text="@string/sign_in"
-        android:textColor="#fff"
+    <TextView
+        android:id="@+id/signed_in"
+        android:layout_width="168dp"
+        android:layout_height="69dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:text="Signed in :)"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.459" />
 
 </android.support.constraint.ConstraintLayout>
