--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,6 @@
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="android:textColor">@color/secondary_text</item>
-        <item name="android:navigationBarColor">#5b92b0</item>
+        <item name="android:navigationBarColor">#2d83c4</item>
     </style>
 </resources>
